# daity_v4

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  PHASE3.md  PLAN.md  README.md  STATUS.md  audit.command  liquid_universe_100stocks.txt  pyproject.toml  ruff.toml
.claude/memory/: MEMORY.md  feedback_curriculum_training.md  feedback_long_only.md  feedback_score_calibration_root_cause.md  preference_gpu_utilization.md  project_encoder_training_priorities.md  project_pu7_trajectory_baselines.md  project_sweep_v1_phase_summary.md  reference_strategy_backlog_retry_on_new_encoder.md  reference_sweep_v1_pipeline.md
configs/data/: bq.yaml  corp_actions.detected.yaml  corp_actions.yaml  ob.yaml
configs/train/: pretrain.yaml  pretrain_v2.yaml  pretrain_v2_long.yaml  pretrain_v3.yaml  pretrain_v3_features.yaml  pretrain_v3_lr.yaml  pretrain_v3_xattn.yaml
daity/: __init__.py
daity/data/: __init__.py  aux_features.py  bq.py  calendar_nse.py  candles.py  cohort_cache.py  cohort_dataset.py  cohort_pair_dataset.py  cohort_pair_miner.py  corp_action_detect.py  cross_section.py  datasets.py  factor_residual.py  feature_precompute.py  features.py  groww.py  intraday_horizons.py  kite.py  labels.py  ob_features.py  ob_ingest.py  ohlcv_io.py  parquet_ingest.py  parquet_store.py  preprocess.py  readjust.py  splits.py  symbols.py  tokenizer_targets.py  tradeable_labels.py
daity/eval/: __init__.py  backtest.py  classifier_metrics.py  lightgbm_fallback.py  metrics.py  walk_forward.py  xgboost_baseline.py
daity/models/: __init__.py  backbone.py  conformal.py  fusion.py  heads.py  orderbook.py  revin.py  tokenizer.py  tradeable_head.py
daity/models/cohort/: cohort_heads.py  cohort_loss.py  cohort_module.py  cross_attn.py  film_conditioning.py  market_context.py  stock_encoder.py  top_k_attn.py
daity/models/lightweight/: __init__.py  ft_set_transformer.py
daity/scripts/: __init__.py  _assembly_worker.py  adaptive_calibrated_strategy.py  adaptive_strategy_eval.py  adaptive_weights_strategy.py  aggregate_posttrain.py  backtest_cli.py  build_cohort_cache.py  build_labels.py  build_pnl_labels.py  build_residual_labels.py  build_smooth_uptrend_labels.py  build_tradeable_labels.py  build_triple_barrier_labels.py  check_staleness.py  conformal_calibrate.py  conformal_calibration.py  detect_corp_actions.py  dump_static_predictions.py  eval_cohort_pnl.py  eval_tradeable.py  expert_policy_eval.py  finetune_cli.py  finetune_tradeable_cli.py  fix_daily_ts.py  fix_pointwise.py  ingest_ob.py  ingest_parquet.py  intraday_simulator.py  intraday_simulator_v2.py  kite_login.py  log_pnl_to_wandb.py  loss_trajectory.py  multi_horizon_no_dup_strategy.py  online_walk_forward.py  phase0_audit.py  posttrain_cli.py  precompute_aux_features.py  precompute_features.py  pretrain_cli.py  (+12 more)
daity/serve/: __init__.py
daity/strategy/: __init__.py
daity/training/: __init__.py  callbacks.py  finetune.py  finetune_loop.py  losses.py  posttrain.py  posttrain_loop.py  pretrain.py  tradeable_finetune.py  tradeable_finetune_loop.py  walk_forward.py
daity/utils/: __init__.py  env.py  logging.py
docs/: strategy_adaptive_calibrated_v1.md  vast_bootstrap.md
notebooks/: README.md  phase_1_writeup.ipynb  phase_1_writeup.py  phase_2_writeup.ipynb  phase_2_writeup.py
reports/: autoloop_champion_summary.md  autoloop_reproduce.md  autoloop_results.md  h200_gpu_util_diagnosis.md
reports/reviews/: phase_0_review.md  phase_1_review.md  phase_1_review_responses.md  phase_1_review_v2.md  phase_2_architect_review.md  phase_2_review.md  phase_3_3_review.md  phase_3_4_review.md  phase_3_5_review.md  phase_3_6_review.md  phase_3_7_review.md  phase_3_architect_review.md  phase_3_xgboost_baseline_review.md
reports/sweep_v1/: configs.json  insights.md  results.csv
reports/sweep_v1/insights_per_config/: A1_tgt05_stp03_h60_close.md  A2_tgt05_stp03_h60_slip5.md  B1_tgt075_stp04_h60_close.md  C1_tgt10_stp05_h120_close.md  C2_tgt10_stp05_h120_slip5.md  D1_tgt15_stp05_h120_close.md  E1_wideRR_tgt08_stp03_h90.md  F1m_wideTgt_M1_rerank3_stable.md  K1_tightTgt_retailLabelCost.md  K1m_tightTgt_M1_rerank3.md  K5m_NIFTY50_M1_rerank3_top3.md  M1_scoreRerank_K3_on_A2labels.md  M2_hybridRerank_K3_on_A2labels.md  M3_scoreFloor_at0_on_A2labels.md  M4_scoreRerank_K1_aggressive.md  M5_scoreRerank_K2_on_A2labels.md  M6_scoreRerank_K4_on_A2labels.md  M7_scoreRerank_K5_on_A2labels.md  PU1_unfreezeLast1_lr5e5_pnl200.md  PU2_unfreezeLast2_lr3e5_pnl200.md  PU3_lora_lr1e4_pnl200.md  PU4_unfreezeLast2_pnl500_T05_k5.md  PU5_unfreezeLast2_pnl100_T07_k20.md  PU6_unfreezeAll_lr1e5_pnl200.md  S1_stabilize_wideRR_lowLR_clip.md  S5_trainWide_deployTight_stable.md
scripts/: README.md  audit_ob_fillability.py  compare_scaling_runs.py  cross_target_ensemble.py  diagnose_loss_collapse.py  diagnose_nan_v3_features.py  diagnose_pred_vs_target.py  ob_paper_pnl.py  ob_paper_pnl_partial.py  rolling_entry_strategy.py  score_rolling_anchor.py  seed_ensemble.py
tests/: conftest.py
tests/leakage/: test_cross_section_leakage.py  test_features_leakage.py  test_label_leakage.py  test_parquet_leakage.py  test_posttrain_leakage.py  test_posttrain_loop_leakage.py  test_split_leakage.py  test_xgboost_features_leakage.py
tests/unit/: test_audit_helpers.py  test_backbone.py  test_bq_jsonable.py  test_calendar_nse.py  test_candles.py  test_conformal.py  test_cross_section.py  test_datasets.py  test_detect_corp_actions.py  test_env.py  test_features.py  test_groww_client.py  test_heads_and_losses.py  test_kite_client.py  test_kite_login.py  test_labels.py  test_parquet_store.py  test_posttrain.py  test_posttrain_loop.py  test_preprocess.py  test_pretrain_callbacks.py  test_pretrain_module.py  test_readjust_symbols.py  test_refresh_calendar_diff.py  test_refresh_ohlcv_frame.py  test_revin.py  test_symbols.py  test_tokenizer.py  test_walk_forward.py  test_xgboost_baseline.py
